feature/handicap-index (#15)
* feat(*): Refactoring creating and persisting a scorecard

* feat(*): Refactoring creating and persisting a scorecard

* feat(*): Add event publisher for scorecard created

* feat(*): scorecard event listener is asynchronous

* feat(*): Move scorecard not found exception to the controller, the service returns an optional

* fix(*): Fix test after optional change

* fix(*): Spring Boot upgrade

* fix(*): formatting updates

* fix(*): Add holesPlayed attribute to scorecard entity

* chore(*): Add local reset script

* fix(*): Use a score type enum to track scorecards with nine or 18 holes played

* chore(*): Local reset clears pg_data volume

* chore(*): Local docker environment names pg_data volume

* fix(*): Calculate and persist differential when score created.  Separate differential and handicap calculations.

* fix(*): Handicap persisted as single row and Hibernate envers tracks handicap history.

* fix(*): Recalculate handicap after deleting a scorecard.

* fix(*): Add par to the scorecard entity.

* fix(*): Add validator for course rating when submitting scorecard

* fix(*): Expose handicap revisions via API

* fix(*): Extend range for course rating validation