@@ -1,11 +1,7 @@
 package com.alimmit.golf.scorecard;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
-import java.time.LocalDate;
-import java.util.List;
-import java.util.Optional;
-
+import com.alimmit.golf.utils.JwtPersona;
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
@@ -25,17 +21,19 @@ import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.context.jdbc.Sql.ExecutionPhase;
-import org.springframework.transaction.annotation.Propagation;
-import org.springframework.transaction.annotation.Transactional;
 
-import com.alimmit.golf.utils.JwtPersona;
+import java.time.LocalDate;
+import java.util.List;
+import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 @ActiveProfiles("test")
 @DataJpaTest
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 @Import(ScorecardRepositoryTest.TestConfig.class)
 @TestPropertySource(locations = "classpath:application-test.properties")
-@Sql(scripts = "classpath:cleanup-scorecard.sql", executionPhase = ExecutionPhase.AFTER_TEST_METHOD)
+@Sql(scripts = "classpath:cleanup.sql", executionPhase = ExecutionPhase.AFTER_TEST_METHOD)
 class ScorecardRepositoryTest {
 
   @TestConfiguration
@@ -75,50 +73,64 @@ class ScorecardRepositoryTest {
     ScorecardEntity entity = new ScorecardEntity(
         "scr-test123",
         LocalDate.of(2025, 9, 21),
-        1L,
-        88);
+        "Test Course",
+        "Test Tee",
+        88,
+        72,
+        72.1,
+        125.0,
+        ScorecardType.EIGHTEEN,
+        14.4,
+        true);
     ScorecardEntity saved = scorecardRepository.save(entity);
 
     // Then: Audit fields should be populated automatically
-    assertThat(saved.getScorecardId()).isEqualTo("scr-test123");
-    assertThat(saved.getCreatedBy()).isEqualTo(JwtPersona.GARY_GOLFER.getSub());
-    assertThat(saved.getLastModifiedBy()).isEqualTo(JwtPersona.GARY_GOLFER.getSub());
-    assertThat(saved.getCreatedAt()).isNotNull();
-    assertThat(saved.getLastModifiedAt()).isNotNull();
+    Assertions.assertThat(saved)
+        .hasFieldOrPropertyWithValue("scorecardId", "scr-test123")
+        .hasFieldOrPropertyWithValue("createdBy", JwtPersona.GARY_GOLFER.sub())
+        .hasFieldOrProperty("createdAt")
+        .hasFieldOrPropertyWithValue("courseName", "Test Course")
+        .hasFieldOrPropertyWithValue("teeName", "Test Tee")
+        .hasFieldOrPropertyWithValue("score", 88)
+        .hasFieldOrPropertyWithValue("par", 72)
+        .hasFieldOrPropertyWithValue("rating", 72.1)
+        .hasFieldOrPropertyWithValue("slope", 125.0)
+        .hasFieldOrPropertyWithValue("differential", 14.4)
+        .hasFieldOrPropertyWithValue("indexEstablished", true);
   }
 
   @Test
   void shouldFindAllForCurrentUser() {
     // Given: Multiple users with scorecards
-    setSecurityContext(JwtPersona.GARY_GOLFER.getSub());
+    setSecurityContext(JwtPersona.GARY_GOLFER.sub());
     scorecardRepository.save(createScorecard("scr-gary1", 88));
     scorecardRepository.save(createScorecard("scr-gary2", 90));
 
-    setSecurityContext(JwtPersona.PAT_PUTTER.getSub());
+    setSecurityContext(JwtPersona.PAT_PUTTER.sub());
     scorecardRepository.save(createScorecard("scr-pat1", 85));
 
     // When: Gary searches for his scorecards
-    setSecurityContext(JwtPersona.GARY_GOLFER.getSub());
+    setSecurityContext(JwtPersona.GARY_GOLFER.sub());
     List<ScorecardEntity> garyResults = scorecardRepository.findAllForCurrentUser();
 
     // Then: Only Gary's scorecards should be returned
     assertThat(garyResults)
         .hasSize(2)
-        .allMatch(s -> s.getCreatedBy().equals(JwtPersona.GARY_GOLFER.getSub()));
+        .allMatch(s -> s.getCreatedBy().equals(JwtPersona.GARY_GOLFER.sub()));
 
     // When: Pat searches for their scorecards
-    setSecurityContext(JwtPersona.PAT_PUTTER.getSub());
+    setSecurityContext(JwtPersona.PAT_PUTTER.sub());
     List<ScorecardEntity> patResults = scorecardRepository.findAllForCurrentUser();
 
     // Then: Only Pat's scorecard should be returned
     assertThat(patResults).hasSize(1);
-    assertThat(patResults.get(0).getCreatedBy()).isEqualTo(JwtPersona.PAT_PUTTER.getSub());
+    assertThat(patResults.getFirst().getCreatedBy()).isEqualTo(JwtPersona.PAT_PUTTER.sub());
   }
 
   @Test
   void shouldFindByIdForCurrentUser() {
     // Given: Gary creates a scorecard
-    setSecurityContext(JwtPersona.GARY_GOLFER.getSub());
+    setSecurityContext(JwtPersona.GARY_GOLFER.sub());
     scorecardRepository.save(createScorecard("scr-gary1", 88));
 
     // When: Gary looks up his own scorecard
@@ -129,7 +141,7 @@ class ScorecardRepositoryTest {
     assertThat(garyResult.get().getScorecardId()).isEqualTo("scr-gary1");
 
     // When: Pat tries to access Gary's scorecard
-    setSecurityContext(JwtPersona.PAT_PUTTER.getSub());
+    setSecurityContext(JwtPersona.PAT_PUTTER.sub());
     Optional<ScorecardEntity> patResult = scorecardRepository.findByIdForCurrentUser("scr-gary1");
 
     // Then: Scorecard should not be found (authorization check)
@@ -139,18 +151,18 @@ class ScorecardRepositoryTest {
   @Test
   void shouldDeleteByIdForCurrentUser() {
     // Given: Gary creates a scorecard
-    setSecurityContext(JwtPersona.GARY_GOLFER.getSub());
+    setSecurityContext(JwtPersona.GARY_GOLFER.sub());
     scorecardRepository.save(createScorecard("scr-gary1", 88));
 
     // When: Pat tries to delete Gary's scorecard
-    setSecurityContext(JwtPersona.PAT_PUTTER.getSub());
+    setSecurityContext(JwtPersona.PAT_PUTTER.sub());
     int patDeleteCount = scorecardRepository.deleteByIdForCurrentUser("scr-gary1");
 
     // Then: Nothing should be deleted (authorization check)
     assertThat(patDeleteCount).isZero();
 
     // Verify scorecard still exists
-    setSecurityContext(JwtPersona.GARY_GOLFER.getSub());
+    setSecurityContext(JwtPersona.GARY_GOLFER.sub());
     assertThat(scorecardRepository.findByIdForCurrentUser("scr-gary1")).isPresent();
 
     // When: Gary deletes his own scorecard
@@ -161,31 +173,19 @@ class ScorecardRepositoryTest {
     assertThat(scorecardRepository.findByIdForCurrentUser("scr-gary1")).isEmpty();
   }
 
-  @Test
-  @Transactional(propagation = Propagation.NEVER)
-  void shouldUpdateLastModifiedByWhenEntityIsUpdated() {
-    // Given: Gary creates a scorecard
-    setSecurityContext(JwtPersona.GARY_GOLFER.getSub());
-    ScorecardEntity entity = createScorecard("scr-gary1", 88);
-    ScorecardEntity saved = scorecardRepository.save(entity);
-    String originalCreatedBy = saved.getCreatedBy();
-
-    // When: Dana updates the score (hypothetically if update were allowed)
-    setSecurityContext(JwtPersona.DANA_DRIVER.getSub());
-    saved.setScore(92);
-    ScorecardEntity updated = scorecardRepository.save(saved);
-
-    // Then: createdBy should remain unchanged, but lastModifiedBy should update
-    assertThat(updated.getCreatedBy()).isEqualTo(originalCreatedBy);
-    assertThat(updated.getLastModifiedBy()).isEqualTo(JwtPersona.DANA_DRIVER.getSub());
-  }
-
   private ScorecardEntity createScorecard(String id, Integer score) {
     return new ScorecardEntity(
         id,
         LocalDate.of(2025, 9, 21),
-        1L,
-        score);
+        "Test Course",
+        "Test Tee",
+        score,
+        72,
+        72.1,
+        125.0,
+        ScorecardType.EIGHTEEN,
+        14.4,
+        true);
   }
 
   private void setSecurityContext(String username) {
